# buff

./: LICENSE  README.md
ZMQClient/: README.md
bit-vec/: Cargo.toml
bit-vec/src/: lib.rs
database/: .gitignore  Cargo.toml
database/config/: log4rs.yaml
database/data/: randomwalkdatasample1k-1k
database/script/: compress-all.sh  compress.sh  cr_predict.sh  end2end.sh  float_compress.sh  float_compress_simd.sh  knn-UCR-fft.sh  knn-UCR-grail.sh  knn-UCR-paa.sh  knn-UCR.sh  outlier_exp.sh  run_cr_datasets.sh  run_datasets.sh  run_datasets_simd.sh
database/script/data/: gamma_ucr.csv  gamma_ucr_new.csv  grail-gamma.csv  knn_buff.csv  t_id_south.csv
database/script/python/: crparser.py  e2e_parser.py  extract.py  hist.py  logparser-simd.py  logparser.py  outlier_logparser.py
database/src/: btree.rs  buffer_pool.rs  client.rs  compression_demon.rs  dictionary.rs  fake_client.rs  file_handler.rs  future_signal.rs  kernel.rs  lcce.rs  lib.rs  main.rs  methods.rs  query.rs  segment.rs  signal.rs  stats.rs  tree.rs
database/src/avl/: btrarr.rs  main.rs  mod.rs  set.rs  tree.rs
database/src/benchmark/: main.rs  mod.rs
database/src/benchmark/influx_bench/: mod.rs
database/src/benchmark/tsbs/: mod.rs
database/src/compress/: btr_array.rs  buff_simd.rs  buff_slice.rs  gorilla.rs  main.rs  mod.rs  scaled_slice.rs  split_double.rs  sprintz.rs
database/src/knn/: main.rs  mod.rs
database/src/methods/: bit_packing.rs  compress.rs  deep_learning.rs  fcm_encoder.rs  fourier.rs  gorilla_decoder.rs  gorilla_encoder.rs  int_encoder.rs  kernel.rs  main.rs  mod.rs  parquet.rs  prec_double.rs
database/src/outlier/: main.rs  mod.rs
database/src/plot/: data_hist.rs  mod.rs
database/src/predict/: cr_predictor.rs  main.rs  mod.rs
database/src/pscan/: main.rs
database/src/query/: average.rs  bit_vec_iter.rs  count.rs  max.rs  min.rs  sum.rs
database/src/simd/: mod.rs  vectorize_query.rs
database/test_configs/: config.toml
documentation/: toml_parse_doc.txt
roaring-rs/: Cargo.toml
roaring-rs/src/bitmap/: container.rs  inherent.rs  store.rs
