[package]
name = "time_series_start"
version = "0.1.0"
authors = ["Chunwei Liu <chunwei@uchicago.edu>", "Drew Callahan <acallahan@cs.uchicago.edu>"]
edition = "2018"

[[bin]]
name = "time_series_start"
path = "src/main.rs"

[[bin]]
name = "compress"
path = "src/methods/main.rs"

[[bin]]
name = "comp_profiler"
path = "src/compress/main.rs"

[[bin]]
name = "p_scan"
path = "src/pscan/main.rs"

[[bin]]
name = "knn"
path = "src/knn/main.rs"

[[bin]]
name = "outlier_exp"
path = "src/outlier/main.rs"





[dependencies]
num = "0.2"
log4rs = "0.10.0"
log = "0.4.8"
rocksdb = "0.12.4"
rustfft = "3.0.1"
serde = "1.0.126"
bincode = "1.1.3"
serde_derive = "1.0.126"
rand = "0.6.5"
compression = "0.1.3"
tokio = "0.1.19"
futures = "0.1.26"
toml = "0.5.1"
toml-loader = "0.1.1"
queues = "1.1.0"
nalgebra = "0.18.0"
ndarray = "0.12.1"
#ndarray-linalg = {version = "0.11"}
flate2 = "1.0.11"
parity-snappy = "0.1.0"
#ndarray-linalg = { version = "0.11", features = ["openblas"] }
#ndarray-linalg = { version = "0.11", features = ["netlib"] }
ndarray-linalg = { version = "0.11", features = ["intel-mkl"] }
tsz = "0.1.0"
bitpacking = "0.8.2"
lazy_static = "1.4.0"
croaring = "0.5.0"
rust_decimal = "1.5.0"
parquet = "2.0.0"
libc = "0.2"
#packed_simd = "0.3.3"
histogram = "0.6.9"
itertools = "0.9.0"
zipf = "7.0.0"
permutation = "0.2.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9"
myroaring = { version = "0.6.5", path = "../roaring-rs" }
my-bit-vec = { version = "0.6", path = "../bit-vec"  }
